--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,11 @@
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
-    "qunit": "~1.15.0"
+    "qunit": "~1.15.0",
+    "auth0-lock": "~6.6.2"
+  },
+  "devDependencies": {
+    "bootstrap": "~3.3.1",
+    "bootswatch": "~3.3.1+2"
   }
 }
