--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth0-addon-example",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -11,18 +11,22 @@
     "build": "ember build",
     "test": "ember test"
   },
-  "repository": "",
+  "repository": "https://github.com/cspanring/auth0-addon-example.git",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Christian Spanring",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "broccoli-merge-trees": "^0.2.1",
+    "broccoli-static-compiler": "^0.2.1",
     "ember-cli": "0.1.4",
+    "ember-cli-auth0-lock": "^0.1.0",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
+    "ember-cli-divshot": "^0.1.6",
     "ember-cli-esnext": "0.1.1",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
